welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EAST);
               ^DwarfCode:6: error: not found: value Direction
      setDirection(Direction.WEST);
                   ^DwarfCode:12: error: not found: value Direction
  		setDirection(Direction.EAST);
                             ^