welcome.lessons.welcome.summative.Moria.scala.code
def sortir() {
  setDirection(Direction.EAST);
  while (getCouleurSol() != Color.GREEN) {
    if (estSurBiscuit()) {
      prendBiscuit();
      setDirection(Direction.WEST);
  		while(!estSurBiscuit) {
    		avance();
  		}
  		recule();
  		poseBiscuit();
  		setDirection(Direction.EAST);
    } else if (estFaceMur()) {
      droite();
      avance();
      gauche();
      avance();
    } else {
      avance();
    }
  }
}